# helk

./: .gitignore  ChangeLog.md  LICENSE  README.md  helk.cabal  package.yaml  people.txt
app/: Main.hs
src/: Fiddling.hs  Main.hs  MyAeson.hs  MyMongo.hs  People.hs  PeopleDB.hs  PeopleRepo.hs
