name:                helk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/miladhub/helk#readme
license:             MIT
license-file:        LICENSE
author:              Author name miladhub
maintainer:          milad.bourhani@gmail.com
copyright:           2018 Author Milad Bourhani
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable helk
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       wreq,
                       aeson,
                       unordered-containers,
                       text,
                       vector,
                       split,
                       mtl,
                       mongoDB,
                       http-types
